--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,7 @@
         <members>contactsTable</members>
         <members>customLookup</members>
         <members>customLookupResult</members>
+        <members>selectedsObjectRecordEvent</members>
         <name>AuraDefinitionBundle</name>
     </types>
     <version>36.0</version>
